==> pybricks/pybricks-micropython/lib/pbio/platform/prime_hub_h5/platform.c <==
#include <stdbool.h>
#include <stdint.h>
#include <btstack_chipset_cc256x.h>
#include <stm32h5xx_hal.h>
#include <stm32h5xx_ll_dma.h>
#include <stm32h5xx_ll_rcc.h>
#include <pbdrv/clock.h>
#include <pbdrv/ioport.h>
#include "pbio/light_matrix.h"
#include <pbio/port_interface.h>
#include "../../drv/adc/adc_stm32_hal.h"
#include "../../drv/block_device/block_device_w25qxx_stm32.h"
#include "../../drv/bluetooth/bluetooth_btstack_stm32_hal.h"
#include "../../drv/bluetooth/bluetooth_btstack.h"
#include "../../drv/charger/charger_mp2639a.h"
#include "../../drv/imu/imu_lsm6ds3tr_c_stm32.h"
#include "../../drv/led/led_array_pwm.h"
#include "../../drv/led/led_dual.h"
#include "../../drv/led/led_pwm.h"
#include "../../drv/motor_driver/motor_driver_hbridge_pwm.h"
#include "../../drv/pwm/pwm_stm32_tim.h"
#include "../../drv/pwm/pwm_tlc5955_stm32.h"
#include "../../drv/resistor_ladder/resistor_ladder.h"
#include "../../drv/reset/reset_stm32.h"
#include "../../drv/sound/sound_stm32_hal_dac.h"
#include "../../drv/uart/uart_stm32_ll_irq.h"
#include "../../drv/usb/usb_stm32.h"
#define PBDRV_PRIME_HUB_H5_CRASH_DUMP_MAGIC (0x50424835)

void HAL_I2C_MspInit(I2C_HandleTypeDef *hi2c) {
    GPIO_InitTypeDef gpio_init = { };

    // IMU
    if (hi2c->Instance == I2C2) {
        gpio_init.Pull = GPIO_NOPULL;
        gpio_init.Speed = GPIO_SPEED_FREQ_VERY_HIGH;

        // SCL
        gpio_init.Pin = GPIO_PIN_10;

        // do a quick bus reset in case IMU chip is in bad state
        gpio_init.Mode = GPIO_MODE_OUTPUT_OD;
        HAL_GPIO_Init(GPIOB, &gpio_init);

        for (int i = 0; i < 10; i++) {
            HAL_GPIO_WritePin(GPIOB, GPIO_PIN_10, GPIO_PIN_SET);
            pbdrv_clock_busy_delay_us(1);
            HAL_GPIO_WritePin(GPIOB, GPIO_PIN_10, GPIO_PIN_RESET);
            pbdrv_clock_busy_delay_us(1);
        }

        // then configure for normal use
        gpio_init.Mode = GPIO_MODE_AF_OD;
        gpio_init.Alternate = GPIO_AF4_I2C2;
        HAL_GPIO_Init(GPIOB, &gpio_init);

        // SDA
        gpio_init.Pin = GPIO_PIN_3;
        gpio_init.Alternate = GPIO_AF4_I2C2;
        HAL_GPIO_Init(GPIOB, &gpio_init);

        HAL_NVIC_SetPriority(I2C2_ER_IRQn, 3, 1);
        HAL_NVIC_EnableIRQ(I2C2_ER_IRQn);
        HAL_NVIC_SetPriority(I2C2_EV_IRQn, 3, 2);
        HAL_NVIC_EnableIRQ(I2C2_EV_IRQn);

        // INT1
        gpio_init.Speed = GPIO_SPEED_FREQ_LOW;
        gpio_init.Pin = GPIO_PIN_4;
        gpio_init.Mode = GPIO_MODE_IT_RISING;
        gpio_init.Alternate = 0;
        HAL_GPIO_Init(GPIOB, &gpio_init);

        HAL_NVIC_SetPriority(EXTI4_IRQn, 3, 3);
        HAL_NVIC_EnableIRQ(EXTI4_IRQn);
    }
}

void HAL_ADC_MspInit(ADC_HandleTypeDef *hadc) {
    GPIO_InitTypeDef gpio_init = { };
    ADC_ChannelConfTypeDef adc_ch_config = { };

    // clocks are enabled in SystemInit
    assert_param(__HAL_RCC_TIM2_IS_CLK_ENABLED());
    assert_param(__HAL_RCC_DMA2_IS_CLK_ENABLED());
    assert_param(__HAL_RCC_ADC1_IS_CLK_ENABLED());

    // Reset ADC block to clear any stale state left by bootloader.
    __HAL_RCC_ADC_FORCE_RESET();
    __HAL_RCC_ADC_RELEASE_RESET();

    // All ADC channels in this sequence use the same conversion settings.
    adc_ch_config.SamplingTime = ADC_SAMPLETIME_12CYCLES_5;
    adc_ch_config.SingleDiff = ADC_SINGLE_ENDED;
    adc_ch_config.OffsetNumber = ADC_OFFSET_NONE;
    adc_ch_config.Offset = 0;
    adc_ch_config.OffsetSign = ADC_OFFSET_SIGN_NEGATIVE;
    adc_ch_config.OffsetSaturation = DISABLE;

    // All ADC pins are configured as analog inputs with no pull.
    gpio_init.Mode = GPIO_MODE_ANALOG;
    gpio_init.Pull = GPIO_NOPULL;

    // PC0, ADC_IBAT

    gpio_init.Pin = GPIO_PIN_0;
    HAL_GPIO_Init(GPIOC, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_10;
    adc_ch_config.Rank = ADC_REGULAR_RANK_1;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);

    // PC1, ADCVBAT

    gpio_init.Pin = GPIO_PIN_1;
    HAL_GPIO_Init(GPIOC, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_11;
    adc_ch_config.Rank = ADC_REGULAR_RANK_2;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);

    // PB0, BAT_NTC

    gpio_init.Pin = GPIO_PIN_0;
    HAL_GPIO_Init(GPIOB, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_9;
    adc_ch_config.Rank = ADC_REGULAR_RANK_3;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);

    // PA3, IBUSBCH

    gpio_init.Pin = GPIO_PIN_3;
    HAL_GPIO_Init(GPIOA, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_15;
    adc_ch_config.Rank = ADC_REGULAR_RANK_4;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);

    // PC4, ADC_PC4

    gpio_init.Pin = GPIO_PIN_4;
    HAL_GPIO_Init(GPIOC, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_4;
    adc_ch_config.Rank = ADC_REGULAR_RANK_5;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);

    // PA1, BUTTON2/3/4

    gpio_init.Pin = GPIO_PIN_1;
    HAL_GPIO_Init(GPIOA, &gpio_init);

    adc_ch_config.Channel = ADC_CHANNEL_1;
    adc_ch_config.Rank = ADC_REGULAR_RANK_6;
    HAL_ADC_ConfigChannel(hadc, &adc_ch_config);
}

void HAL_SPI_MspInit(SPI_HandleTypeDef *hspi) {
    if (hspi->Instance == SPI1) {
        // TLC5955 LED driver
        GPIO_InitTypeDef gpio_init = { };

        gpio_init.Pin = GPIO_PIN_5 | GPIO_PIN_6 | GPIO_PIN_7;
        gpio_init.Mode = GPIO_MODE_AF_PP;
        gpio_init.Pull = GPIO_NOPULL;
        gpio_init.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        gpio_init.Alternate = GPIO_AF5_SPI1;
        HAL_GPIO_Init(GPIOA, &gpio_init);
    }
}

void HAL_PCD_MspInit(PCD_HandleTypeDef *hpcd) {
    GPIO_InitTypeDef gpio_init = { };

    HAL_PWREx_EnableVddUSB();

    // Data pins
    gpio_init.Pin = (GPIO_PIN_11 | GPIO_PIN_12);
    gpio_init.Mode = GPIO_MODE_AF_PP;
    gpio_init.Pull = GPIO_NOPULL;
    gpio_init.Speed = GPIO_SPEED_FREQ_HIGH;
    gpio_init.Alternate = GPIO_AF10_USB;
    HAL_GPIO_Init(GPIOA, &gpio_init);

    // VBUS pin
    gpio_init.Pin = GPIO_PIN_9;
    gpio_init.Mode = GPIO_MODE_IT_RISING_FALLING;
    gpio_init.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOA, &gpio_init);

    HAL_NVIC_SetPriority(USB_DRD_FS_IRQn, 6, 0);
    HAL_NVIC_EnableIRQ(USB_DRD_FS_IRQn);
    HAL_NVIC_SetPriority(EXTI9_IRQn, 6, 1);
    HAL_NVIC_EnableIRQ(EXTI9_IRQn);

    // ensure correct initial state
    pbdrv_usb_stm32_handle_vbus_irq(HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_9) == GPIO_PIN_SET);
}

static void stm32lib_SystemInit(void) {
    uint32_t reg_opsr;

    /* FPU settings ------------------------------------------------------------*/
    #if (__FPU_PRESENT == 1) && (__FPU_USED == 1)
    SCB->CPACR |= ((3UL << 20U) | (3UL << 22U)); /* set CP10 and CP11 Full Access */
    #endif

    /* Reset the RCC clock configuration to the default reset state ------------*/
    /* Set HSION bit */
    RCC->CR = RCC_CR_HSION;

    /* Reset CFGR register */
    RCC->CFGR1 = 0U;
    RCC->CFGR2 = 0U;

    /* Reset HSEON, HSECSSON, HSEBYP, HSEEXT, HSIDIV, HSIKERON, CSION, CSIKERON, HSI48 and PLLxON bits */
    #if defined(RCC_CR_PLL3ON)
    RCC->CR &= ~(RCC_CR_HSEON | RCC_CR_HSECSSON | RCC_CR_HSEBYP | RCC_CR_HSEEXT | RCC_CR_HSIDIV | RCC_CR_HSIKERON | \
        RCC_CR_CSION | RCC_CR_CSIKERON | RCC_CR_HSI48ON | RCC_CR_PLL1ON | RCC_CR_PLL2ON | RCC_CR_PLL3ON);
    #else
    RCC->CR &= ~(RCC_CR_HSEON | RCC_CR_HSECSSON | RCC_CR_HSEBYP | RCC_CR_HSEEXT | RCC_CR_HSIDIV | RCC_CR_HSIKERON | \
        RCC_CR_CSION | RCC_CR_CSIKERON | RCC_CR_HSI48ON | RCC_CR_PLL1ON | RCC_CR_PLL2ON);
    #endif

    /* Reset PLLxCFGR register */
    RCC->PLL1CFGR = 0U;
    RCC->PLL2CFGR = 0U;
    #if defined(RCC_CR_PLL3ON)
    RCC->PLL3CFGR = 0U;
    #endif /* RCC_CR_PLL3ON */

    /* Reset PLL1DIVR register */
    RCC->PLL1DIVR = 0x01010280U;
    /* Reset PLL1FRACR register */
    RCC->PLL1FRACR = 0x00000000U;
    /* Reset PLL2DIVR register */
    RCC->PLL2DIVR = 0x01010280U;
    /* Reset PLL2FRACR register */
    RCC->PLL2FRACR = 0x00000000U;
    #if defined(RCC_CR_PLL3ON)
    /* Reset PLL3DIVR register */
    RCC->PLL3DIVR = 0x01010280U;
    /* Reset PLL3FRACR register */
    RCC->PLL3FRACR = 0x00000000U;
    #endif /* RCC_CR_PLL3ON */

    /* Reset HSEBYP bit */
    RCC->CR &= ~(RCC_CR_HSEBYP);

    /* Disable all interrupts */
    RCC->CIER = 0U;

    // Pybricks: this is done later to keep it similar to other platforms.
    /* Configure the Vector Table location add offset address ------------------*/
    // #ifdef VECT_TAB_SRAM
    // SCB->VTOR = SRAM1_BASE | VECT_TAB_OFFSET;     /* Vector Table Relocation in Internal SRAM */
    // #else
    // SCB->VTOR = FLASH_BASE | VECT_TAB_OFFSET;     /* Vector Table Relocation in Internal FLASH */
    // #endif   /* VECT_TAB_SRAM */

    /* Check OPSR register to verify if there is an ongoing swap or option bytes update interrupted by a reset */
    reg_opsr = FLASH->OPSR & FLASH_OPSR_CODE_OP;
    if ((reg_opsr == FLASH_OPSR_CODE_OP) || (reg_opsr == (FLASH_OPSR_CODE_OP_2 | FLASH_OPSR_CODE_OP_1))) {
        /* Check FLASH Option Control Register access */
        if ((FLASH->OPTCR & FLASH_OPTCR_OPTLOCK) != 0U) {
            /* Authorizes the Option Byte registers programming */
            FLASH->OPTKEYR = 0x08192A3BU;
            FLASH->OPTKEYR = 0x4C5D6E7FU;
        }
        /* Launch the option bytes change operation */
        FLASH->OPTCR |= FLASH_OPTCR_OPTSTART;

        /* Lock the FLASH Option Control Register access */
        FLASH->OPTCR |= FLASH_OPTCR_OPTLOCK;
    }
}

void SystemInit(void) {
    // If update mode was requested before a reset, the watchdog is now cleared.
    // Enter mboot here, before anything (including the watchdog) is started.
    if (pbdrv_reset_stm32_is_bootloader_requested()) {
        extern uint32_t _pbdrv_reset_mboot_start[];
        enter_mboot(0x70ad0000, (uint32_t)_pbdrv_reset_mboot_start);
    }

    // enable 8-byte stack alignment for IRQ handlers, in accord with EABI
    // SCB->CCR |= SCB_CCR_STKALIGN_Msk;
    // Implementation is based on stm32_main() from MicroPython.

    stm32lib_SystemInit();

    // Pybricks: using same linker script variable name as other Pybricks platforms
    SCB->VTOR = (uint32_t)&_fw_isr_vector_src;

    HAL_ICACHE_Enable();

    mpu_init();

    NVIC_SetPriorityGrouping(NVIC_PRIORITYGROUP_4);

    // SysTick is needed by HAL_RCC_ClockConfig (called in SystemClock_Config)
    HAL_InitTick(TICK_INT_PRIORITY);

    // set the system clock to be HSE
    SystemClock_Config();

    // enable clocks
    RCC->AHB1ENR |= RCC_AHB1ENR_GPDMA1EN | RCC_AHB1ENR_GPDMA2EN;
    RCC->AHB2ENR |= RCC_AHB2ENR_GPIOAEN | RCC_AHB2ENR_GPIOBEN | RCC_AHB2ENR_GPIOCEN |
        RCC_AHB2ENR_GPIODEN | RCC_AHB2ENR_GPIOEEN | RCC_AHB2ENR_ADCEN | RCC_AHB2ENR_DAC1EN;
    RCC->AHB4ENR |= RCC_AHB4ENR_OCTOSPI1EN;
    RCC->APB1LENR |= RCC_APB1LENR_USART2EN | RCC_APB1LENR_USART3EN | RCC_APB1LENR_UART4EN |
        RCC_APB1LENR_UART5EN | RCC_APB1LENR_UART7EN | RCC_APB1LENR_TIM2EN | RCC_APB1LENR_TIM3EN |
        RCC_APB1LENR_TIM4EN | RCC_APB1LENR_TIM5EN | RCC_APB1LENR_TIM6EN | RCC_APB1LENR_I2C2EN |
        RCC_APB1LENR_USART10EN;
    RCC->APB1HENR |= RCC_APB1HENR_UART9EN;
    RCC->APB2ENR |= RCC_APB2ENR_TIM1EN | RCC_APB2ENR_TIM8EN | RCC_APB2ENR_TIM17EN |
        RCC_APB2ENR_SPI1EN | RCC_APB2ENR_USBEN;
    RCC->APB3ENR |= RCC_APB3ENR_SBSEN;

    // Keep main power on (PE15)
    GPIO_InitTypeDef gpio_init = {
        .Pin = GPIO_PIN_15,
        .Mode = GPIO_MODE_OUTPUT_PP,
    };
    HAL_GPIO_Init(GPIOE, &gpio_init);
    HAL_GPIO_WritePin(GPIOE, GPIO_PIN_15, GPIO_PIN_SET);
}
